attempted creating preset buttons

--- a/index.html
+++ b/index.html
@@ -24,9 +24,26 @@
             <button id="searchBtn">Search</button>
 
         </div>
+        <!-- Add preset city names -->
+        <div id="presetCities">
+            <button class="cityNames">Niagara Falls</button>
+            <button class="cityNames">Niagara-on-the-Lake</button>
+            <button class="cityNames">Fonthill</button>
+            <button class="cityNames">Hamilton</button>
+            <button class="cityNames">Toronto</button>
+        </div>
 
         <!-- City temp, wind, humidity, and UV index -->
-        <div class="col-md-8">
+        <div class="col-md-8 weatherbox">
+            <strong>{CITY AND DATE HERE}</strong>
+            <br>
+            <span class="temperature">{X}°C</span>
+            <br>
+            <span class="wind">{WIND VALUE} MPH</span>
+            <br>
+            <span class="humidity">{HUMIDITY VALUE} %</span>
+            <br>
+            <span class="uvIndex">{UV INDEX VALUE}</span>
 
         </div>
 
