started top right container

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <!-- City temp, wind, humidity, and UV index -->
         <div class="col-md-8 weatherbox">
-            <strong>{CITY AND DATE HERE}</strong>
+            <strong class="cityDate">{CITY HERE} {DATE HERE}</strong>
             <br>
             <span class="temperature">{X}°C</span>
             <br>
