added container with weather information.

--- a/index.html
+++ b/index.html
@@ -16,40 +16,49 @@
         <h1>Weather Dashboard</h1>
     </header>
 
-    <div class="row">
-        <!-- Search for a City sidebar -->
-        <div id="response-container">
-            <label for="cityInput">Search for a City</label>
-            <input type="text" placeholder="Niagara Falls" id="cityInput" name="cityInput">
-            <button id="searchBtn">Search</button>
+    <div class="container">
+        <div class="row sidesearch">
+            <!-- Search for a City sidebar -->
+            <div id="response-container col-md-2">
+                <label id="searchTitle" for="cityInput">Search for a City:</label><br>
+                <input type="text" placeholder="Niagara Falls" id="cityInput" name="cityInput"><br>
+                <button id="searchBtn">Search</button>
 
+            </div>
+            <!-- Add preset city names -->
+            <div class="col-md-2" id="presetCities">
+                <button class="cityNames">Niagara Falls</button><br>
+                <button class="cityNames">Niagara-on-the-Lake</button><br>
+                <button class="cityNames">Fonthill</button><br>
+                <button class="cityNames">Hamilton</button><br>
+                <button class="cityNames">Toronto</button>
+            </div>
         </div>
-        <!-- Add preset city names -->
-        <div id="presetCities">
-            <button class="cityNames">Niagara Falls</button>
-            <button class="cityNames">Niagara-on-the-Lake</button>
-            <button class="cityNames">Fonthill</button>
-            <button class="cityNames">Hamilton</button>
-            <button class="cityNames">Toronto</button>
-        </div>
-
         <!-- City temp, wind, humidity, and UV index -->
-        <div class="col-md-8 weatherbox">
-            <strong class="cityDate">{CITY HERE} {DATE HERE}</strong>
-            <br>
-            <span class="temperature">{X}°C</span>
-            <br>
-            <span class="wind">{WIND VALUE} MPH</span>
-            <br>
-            <span class="humidity">{HUMIDITY VALUE} %</span>
-            <br>
-            <span class="uvIndex">{UV INDEX VALUE}</span>
-
+        <div class="row weatherbox">
+            <div class="col-md-6">
+                <strong class="cityDate">{CITY HERE} {MM/DD/YYYY}</strong>
+                <br>
+                <span class="temperature">{X}°C</span>
+                <br>
+                <span class="wind">{WIND VALUE} MPH</span>
+                <br>
+                <span class="humidity">{HUMIDITY VALUE} %</span>
+                <br>
+                <span class="uvIndex">{UV INDEX VALUE}</span>
+            </div>
         </div>
 
         <!-- 5-Day Forecast -->
         <div class="col-md-8">
-
+            <h2>5-Day Forecast:</h2> <br>
+            <div class="fiveDayForecast">
+                <div class="dailyForecast"></div>
+                <div class="dailyForecast"></div>
+                <div class="dailyForecast"></div>
+                <div class="dailyForecast"></div>
+                <div class="dailyForecast"></div>
+            </div>
         </div>
 
     </div>
