--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
 
     <div class="row">
-        <div class="sidesearch col-md-3">
+        <div class="sidesearch col-4">
             <!-- Search for a City sidebar -->
-            <div id="response-container">
+            <div id="response-container mt-2">
                 <label id="searchTitle" for="cityInput">Search for a City:</label>
                 <input type="text" placeholder="Niagara Falls" id="cityInput" name="cityInput"><br>
                 <button id="searchBtn">Search</button>
             </div>
-
+            <div class="list-group"></div>
             <!-- Add preset city names -->
             <div id="presetCities">
                 <button class="cityNames">Niagara Falls</button><br>
@@ -38,23 +38,29 @@
 
 
         <!-- City temp, wind, humidity, and UV index -->
-        <div class="weatherbox col-md-8">
-            <strong class="cityDate">{CITY HERE} {MM/DD/YYYY}</strong>
-            <br>
-            <span class="temperature">{X}°C</span>
-            <br>
-            <span class="wind">{WIND VALUE} MPH</span>
-            <br>
-            <span class="humidity">{HUMIDITY VALUE} %</span>
-            <br>
-            <span class="uvIndex">{UV INDEX VALUE}</span>
+        <div class="weatherbox col-8">
+            <div class="row p-2">
+                <div class="card">
+                    <div class="card-body">
+                        <strong class="cityDate">{CITY HERE} {MM/DD/YYYY}</strong>
+                        <br>
+                        <span class="temperature">{X}°C</span>
+                        <br>
+                        <span class="wind">{WIND VALUE} MPH</span>
+                        <br>
+                        <span class="humidity">{HUMIDITY VALUE} %</span>
+                        <br>
+                        <span class="uvIndex">{UV INDEX VALUE}</span>
+                    </div>
+                </div>
+                <!-- 5-Day Forecast -->
+                <div class="row forecast">
+                    <h2>5-Day Forecast:</h2>
+                </div>
+            </div>
+            <div class="fiveDayForecast row"></div>
         </div>
 
-        <!-- 5-Day Forecast -->
-        <div class="col-md-8 forecast">
-            <h2>5-Day Forecast:</h2>
-            <div class="fiveDayForecast"></div>
-        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
