added more styling features

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <input type="text" placeholder="Niagara Falls" id="cityInput" name="cityInput"><br>
                     <button id="searchBtn">Search</button>
                 </div>
+                <div class=lineBreak></div>
                 <div class="list-group"></div>
                 <!-- Add preset city names -->
                 <div id="presetCities">
