save to local storage

--- a/index.html
+++ b/index.html
@@ -30,12 +30,7 @@
                 <div class="list-group"></div>
                 <!-- Add preset city names -->
                 <div id="presetCities">
-                    <button class="cityNames"></button><br>
-                    <!-- <button class="cityNames">Niagara Falls</button><br>
-                    <button class="cityNames">Niagara-on-the-Lake</button><br>
-                    <button class="cityNames">Fonthill</button><br>
-                    <button class="cityNames">Hamilton</button><br>
-                    <button class="cityNames">Toronto</button> -->
+                    <button class="cityNames"></button>
                 </div>
             </div>
 
