fixed local storage

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="list-group"></div>
                 <!-- Add preset city names -->
                 <div id="presetCities">
-                    <button class="cityNames"></button>
+                    <!-- <button class="cityNames"></button> -->
                 </div>
             </div>
 
