--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
                 <div class=lineBreak></div>
                 <div class="list-group"></div>
                 <!-- Add preset city names -->
-                <div id="presetCities">
-                    <!-- <button class="cityNames"></button> -->
-                </div>
+                <div id="presetCities"></div>
             </div>
 
 
